переделал ручки для обновление таски, а так же получения пользователя
